--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
     "rules": {
         "import/no-extraneous-dependencies": 0,
         "no-console": 0,
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "max-len": 0,
+        "no-restricted-globals": 0
     }
 }
