--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.0.9",
-    "whatwg-fetch": "^3.2.0"
+    "webpack-pwa-manifest": "^4.3.0",
+    "whatwg-fetch": "^3.2.0",
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "dependencies": {
+    "idb": "^6.1.5",
     "regenerator-runtime": "^0.13.5"
   }
 }
